# DPD-001

./: .gitignore  .obsidianignore  BOOT-SYNTH-START.md  BUILD.md  CLAUDE.md  DPD-001.extensions-manifest.json  EDITOR-CONFIG.md  HANDOFF_SW_TRIGGER_DEBUG.md  MOKU_API.md  Makefile  PHASE2.md  README.md  TO-DOS.md  UNI-OSC-START.md  cleanup-extensions.sh  dpd-bits.tar  new-git-ignore  pyproject.toml  t.txt  update-extensions-manifest.sh  vscode-extensions-review.md
.claude/: AGENTS-README.md  settings.local.json
.cursor/: DPD-001.code-workspace  DPD-001.code-workspace.example  README.md  WORKSPACE-vs-DIRECTORY.md  keybindings.json  settings.json
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  workspace.json
B7B-Demo/: .gitignore  B7B-README.md  REQUIREMENTS.md  WAVEFORM_WIDGETS.md  b7b-map.txt  pyproject.toml  screensaver.py  screensaver_repl.py  screensaver_split.py  terminal_raster.py  waveform_widget.py  waveform_widget_buffered.py
B7B-Demo/docs/: design-notes.md
B7B-Demo/examples/: animation_viewer.py  demo.py  iterate_effects.sh  static_demo.py
B7B-Demo/src/: README.md  __init__.py
B7B-Demo/src/animations/: __init__.py  effects.py
B7B-Demo/src/bpb/: __init__.py  codec.py
B7B-Demo/src/render/: __init__.py  blocks.py
B7B-Demo/src/wavetables/: __init__.py  generators.py
N/: CLAUDE.md  HVS.md  dpd_utils_README.md  hardware_debug_checklist.md  network-register-sync.md
Templater/: README.md
Templates/: 99_internal_on_open_accessed.md  README-created-modified-accessed.md  README.md  TEMPLATE_FRONTMATTER_TIMES.md  (+2 more)
(+297 files in other folders)
